[package]
name = "spn"
description = "A client for the Save Page Now 2 API"
authors = ["Jannes Timm"]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/jannes/savepagenow-rs"
documentation = "https://docs.rs/spn"
keywords = ["savepagenow", "spn", "spn2", "archive.org"]
categories = ["api-client", "sdk"]

[dependencies]
reqwest = { version = "0.11.12", features = ["json"] }
tokio = { version = "1.21.2", features = ["net"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"

[dev-dependencies]
tokio = { version = "1.21.2", features = ["rt", "macros", "time"] }
